Changes synced for APIs
